# ALEA

./: Dockerfile  environment.py  requirements.txt  validate-submission.sh
Alea/: Dockerfile  README.md  inference.py  models.py  openenv.yaml  pyproject.toml  server.py
Alea/Alea/: README.md  pyproject.toml
Alea/Alea/server/: app.py
Alea/Alea/static/: app.js
Alea/graders/: test_grader.py
Alea/static/: index.html
Alea/tasks/: hard.py  medium.py
graders/: quality_grader.py  syntax_grader.py
static/: style.css
tasks/: easy.py
