[project]
name = "alea"
version = "1.0.0"
description = "ALEA - Adaptive Learning Environment for Agents"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "openai>=1.30.0",
    "pyflakes>=3.2.0",
    "radon>=6.0.1",
    "pytest>=8.2.0",
    "python-multipart>=0.0.9",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
